# elektra

./: .clang-tidy  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  LICENSE  README.md  build.sh  checks.json  compile_commands.json  debug-build.sh  debug-parallel-build.sh  elektra.cpp  hash-check.cpp
.trunk/: trunk.yaml
benchmarks/: README.md  benchmark.h  get_time.h  io.h  parse_command_line.h
benchmarks/graphs/: basic-medium.txt  basic.txt  email-Eu-core.txt
elektra/: concurrentMap.h  elektra_assert.h  hash_pair.h  hash_table_utils.h  macros.h  pair_hash_table.h  resizable_table.h  spanning_tree.h  sparse_table.h  union_find.h
elektra/batch_dynamic_connectivity/: connectivity-helpers.h  connectivity.h  dynamic_connectivity.h  graph.h  log.h
elektra/parallel_euler_tour_tree/: edge_map.h  edge_map.hpp  element.h  element.hpp  euler_tour_tree.h  euler_tour_tree.hpp  hdt_element.h  hdt_euler_tour_tree.h  utilities.h
elektra/parallel_skip_list/: augmented_skip_list.h  concurrent_array_allocator.h  skip_list.h
elektra/utilities/: boost_spanning_tree.h  cas.h  sequence_utils.h  simple_forest_connectivity.h  while_loop.h
reference-impl/connectivity-reference/src/: CMakeLists.txt
reference-impl/connectivity-reference/src/dynamic_graph/: CMakeLists.txt
reference-impl/connectivity-reference/src/dynamic_graph/benchmark/: benchmark_dynamic_connectivity.cpp
reference-impl/connectivity-reference/src/dynamic_graph/include/dynamic_graph/: dynamic_connectivity.hpp  graph.hpp
reference-impl/connectivity-reference/src/dynamic_graph/src/: dynamic_connectivity.cpp  dynamic_forest.cpp  dynamic_forest.hpp  graph.cpp  sequence.cpp  sequence.hpp  utils_assert.hpp  utils_hash.hpp
reference-impl/connectivity-reference/src/dynamic_graph/test/: CMakeLists.txt  test_dynamic_connectivity.cpp  test_dynamic_forest.cpp  test_sequence.cpp
test/: elektra_test.cpp  reference_test.cpp
test/reference_tests/: reference_connectivity.hpp
test/tests/: test_augmented_skip_list.h  test_hdt_euler_tour_tree.h  test_parallel_batch_connected.h  test_parallel_ett.h  test_parallel_euler_tour_tree.h  test_parallel_skip_list.h  test_spanning_tree.h  test_union_find.h
